# CLion-Projects

./: README.md
5G_CHAIN/: 5G_CHAIN.c  CMakeLists.txt
5G_CHAIN/5G_CHANNEL_DIST_NOISE/: 5G_CHANNEL_DIST_NOISE_functions.c  5G_CHANNEL_DIST_NOISE_functions.h  5G_CHANNEL_NOISE_DIST_mex.c
5G_CHAIN/5G_DATASOURCE/: 5G_DATASOURCE_functions.c  5G_DATASOURCE_functions.h  5G_DATASOURCE_mex.c
5G_CHAIN/5G_MOD_GOLDEN/: 5G_GAM_MAPPING.c  5G_GAM_MAPPING.h  5G_MOD_GAM_functions.c  5G_MOD_GAM_functions.h  5G_MOD_GAM_mex.c
5G_CHAIN/5G_MOD_QAM/: 5G_MOD_QAM_functions.c  5G_MOD_QAM_functions.h
5G_CHAIN/GNUPLOT/: plot.c  plot.h
Enlace_WDM/: CMakeLists.txt  Enlace_WDM.c
Enlace_WDM/Functions/: Enlace_WDM_functions.h  GNU_plot.h
GAM/: Readme  Readme.md
GAM/GAM v1/: CMakeLists.txt
GAM/GAM v2/: GAM_MODULATION.xlsx  main.c
GAM/GAM v3/: CODE_v3.txt  CODE_v4.txt  main.c
GAM/GAM v4/: CODE_v3 (BASE).txt  CODE_v4 (PREAMBLE).txt  CODE_v5 (PILOTOS + CFO).txt  STEPS.txt  main.c
GAM/GAM v5/: main.c
GAM/GAM v6/: GAM_MODULATION.xlsx  main.c
GAM/GAM v7/: STEPS.txt  main.c
GAM/GAM v8/: CMakeLists.txt  main.c
GAM/GAM v8/MODULES/: Common.h
GAM/GAM v8/MODULES/CHANNEL/: Channel.c  Channel.h
GAM/GAM v8/MODULES/DATASOURCE/: Datasource.c  Datasource.h
GAM/GAM v8/MODULES/FRAME/: Frame.c  Frame.h
GAM/GAM v8/MODULES/MOD/: Bit_Mapping_GAM2.h  Bit_Mapping_GAM3.h  Bit_Mapping_GAM4.h  Mod.c  Mod.h
GAM/GAM v8/MODULES/PRB/: PRB.c  PRB.h
GAM/GAM v8/MODULES/SYNC/: Sync.c  Sync.h
GAM/GAM v8/MODULES/TBLOCK/: TBlock.c  TBlock.h
GAM_v1/: GAM_MODULATION.xlsx  main.c
